--- a/Logica/Logica.tex
+++ b/Logica/Logica.tex
@@ -789,7 +789,7 @@
 
         \begin{multicols}{2}
             
-            \large{\textbf{Ley del Dilema Constructivo (1)}}
+            \large{\textbf{Ley del Dilema Constructivo}}
                 \begin{equation*}
                 \begin{split}
                     &p \to q             \\
@@ -800,7 +800,7 @@
                 \end{split}
                 \end{equation*}
 
-            \large{\textbf{Ley del Dilema Constructivo (2)}}
+            \large{\textbf{Ley del Dilema Constructivo}}
                 \begin{equation*}
                 \begin{split}
                     &p \to q             \\
@@ -817,7 +817,7 @@
 
         \begin{multicols}{2}
             
-            \large{\textbf{Ley del Dilema Destructivo (1)}}
+            \large{\textbf{Ley del Dilema Destructivo}}
                 \begin{equation*}
                 \begin{split}
                     &p \to q                \\
@@ -828,7 +828,7 @@
                 \end{split}
                 \end{equation*}
 
-            \large{\textbf{Ley del Dilema Destructivo (2)}}
+            \large{\textbf{Ley del Dilema Destructivo}}
                 \begin{equation*}
                 \begin{split}
                     &p \to q                \\
